--- a/style.css
+++ b/style.css
@@ -1,12 +1,9 @@
 /*! Typebase.less v0.1.0 | MIT License */
-/* Setup */
 html {
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Ubuntu, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 137.5%;
-  -webkit-font-smoothing: antialiased;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 137%;
 }
-/* Copy & Lists */
+
 p {
   line-height: 1.5rem;
   margin-top: 1.5rem;
@@ -17,60 +14,20 @@ ol {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
-ul li,
-ol li {
-  line-height: 1.5rem;
-}
-ul ul,
-ol ul,
-ul ol,
-ol ol {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-/* Headings */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Ubuntu, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  margin-top: 1.5rem;
-  margin-bottom: 0;
-  line-height: 1.5rem;
-}
+
 h1 {
+  margin-bottom: 0;
   font-size: 4.242rem;
   line-height: 4.5rem;
   margin-top: 3rem;
 }
-h2 {
-  font-size: 2.828rem;
-  line-height: 3rem;
-  margin-top: 3rem;
-}
-h3 {
-  font-size: 1.414rem;
-}
-h4 {
-  font-size: 0.707rem;
-}
-h5 {
-  font-size: 0.4713333333333333rem;
-}
-h6 {
-  font-size: 0.3535rem;
-}
-/* Leading paragraph text */
+
 .lead {
   font-size: 1.6rem;
   line-height: 1.3;
 }
 main {
-  width: 590px;
-  margin: 0 auto;
+  margin: 0 15% auto;
 }
 
 a {
@@ -81,12 +38,22 @@ a:focus {
   color: blue;
 }
 
-@media only screen and (max-width: 812px) {
+@media (max-width: 496px) {
+  html {
+    font-size: 90%;
+  }
+  main {
+    margin: 0 5% auto;
+  }
+}
+@media (max-width: 812px) {
+
   body {
-    margin: 16px;
+    margin: 1.5em;
   }
 
   main {
-    width: 100%;
+    margin: 0 5% auto;
   }
 }
+
