--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ h1 {
   margin-top: 3rem;
 }
 
+h2 {
+  margin-bottom: 0;
+  font-size: 2.5rem;
+  line-height: 3.5rem;
+  margin-top: 3rem;
+}
+
 .lead {
   font-size: 1.6rem;
   line-height: 1.3;
